<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/use_fingerprint_to_authenticate_key"
        android:persistent="true"
        android:title="@string/use_fingerprint_to_authenticate_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/remember_ssid"
        android:persistent="true"
        android:title="@string/remember_ssid_title" />
    <Preference
        android:summary="Edit your desktops server addresses"
        android:title="Desktop list">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="io.github.jokoframework.tahachi.activity.HostListActivity"
            android:targetPackage="io.github.jokoframework.tahachi" />
    </Preference>
    <PreferenceCategory android:title="@string/credentials">
        <EditTextPreference
            android:inputType="text"
            android:key="@string/username"
            android:persistent="true"
            android:title="@string/username_description" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="@string/password"
            android:persistent="true"
            android:title="@string/password_description" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/host_label">
        <ListPreference
            android:entries="@array/trusted_hosts_descriptions"
            android:entryValues="@array/trustedHosts"
            android:key="host_selected"
            android:persistent="true"
            android:title="@string/select_desktop_label" />
    </PreferenceCategory>
</PreferenceScreen>