<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/menuLayout"
    android:paddingTop="60dp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/unlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/unlock"
        app:srcCompat="@drawable/unlock" />

    <ImageButton
        android:id="@+id/lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lock"
        app:srcCompat="@drawable/lock" />
    <TextView
        android:id="@+id/locked_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:textColor="?android:attr/colorAccent"
        android:text="@string/locked"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/unlocked_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:textColor="?android:attr/colorAccent"
        android:text="@string/unlocked"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/console"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"/>

</LinearLayout>